--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="line"></div>
       </div>
       <ul class="social-list">
-        <li><a href="" class="fa fa-instagram"></a></li>
+        <li><a target="_blank" href="https://www.instagram.com/adcarpentry_and_construction/?hl=en" class="fa fa-instagram"></a></li>
        
-        <li><a href="" class="fa fa-facebook"></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/ADCarpentryconstructionltd/" class="fa fa-facebook"></a></li>
       </ul>
     </div>
 
