--- a/bathrooms.html
+++ b/bathrooms.html
@@ -159,11 +159,9 @@
     <main class="main main-inner main-project" style="background-image:url('img/bg/project.jpg');" data-stellar-background-ratio="0.6">
       <div class="container">
         <header class="main-header">
-          <h1>Project in Paris</h1>
+          <h1>Bathrooms</h1>
           <div class="project-title-info">
-            <div class="project-info-item"><span class="text-primary">Client</span>: Modernize ltd.</div>
-            <div class="project-info-item"><span class="text-primary">Scale:</span> 3500 km<sup>2</sup></div>
-          </div>
+            
         </header>
       </div>
 
@@ -193,14 +191,14 @@
             <div class="row">
               <div class="project-details-info wow fadeInLeft">
                 <h3 class="project-details-title">
-                  Project description<br> is here #1
+                  Ready to Renovate Your Bathroom?
                 </h3>
                 <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
                 This can be compared to an actual office’s files, machines and decorations. 
                 The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
               </div>
               <div class="project-details-img col-md-8 col-md-offset-4">
-                <img alt="" class="img-responsive" src="img/projects/1-780x668.jpg">
+                <img alt="" class="img-responsive" src="img/projects/bathrooms-1.jpg">
               </div>
             </div>
           </div>
@@ -208,11 +206,9 @@
             <div class="row">
               <div class="project-details-info wow fadeInRight">
                 <h3 class="project-details-title">
-                  Project description<br> is here #2
+                  Create Your Oasis
                 </h3>
-                <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
-                This can be compared to an actual office’s files, machines and decorations. 
-                The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
+                <p class="project-details-descr">Indulge in luxury and comfort with our expert bathroom renovation services. Whether you're envisioning a spa-like retreat, a sleek modern powder room, or a family-friendly space, AD Carpentry & Construction is here to turn your bathroom dreams into reality. Our skilled team specialises in creating beautiful, functional bathrooms that elevate your daily routine and add value to your home.</p>
               </div>
               <div class="project-details-img col-md-8">
                 <img alt="" class="img-responsive" src="img/projects/2-780x668.jpg">
@@ -223,11 +219,9 @@
             <div class="row">
               <div class="project-details-info wow fadeInLeft">
                 <h3 class="project-details-title">
-                  Project description<br> is here #3
+                  Exceptional Results
                 </h3>
-                <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
-                This can be compared to an actual office’s files, machines and decorations. 
-                The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
+                <p class="project-details-descr">A bathroom renovation is an investment in your home's comfort and value. That's why we prioritise quality craftsmanship and attention to detail in every project we undertake. Our skilled tradespeople and contractors use premium materials and advanced techniques to ensure that your new bathroom is not only beautiful but also built to withstand the test of time. From installation to finishing touches, we'll deliver exceptional results that exceed your expectations.</p>
               </div>
               <div class="project-details-img col-md-8 col-md-offset-4">
                 <img alt="" class="img-responsive" src="img/projects/3-780x668.jpg">
