--- a/extentions.html
+++ b/extentions.html
@@ -159,11 +159,11 @@
     <main class="main main-inner main-project" style="background-image:url('img/bg/project.jpg');" data-stellar-background-ratio="0.6">
       <div class="container">
         <header class="main-header">
-          <h1>Project in Paris</h1>
-          <div class="project-title-info">
+          <h1>Extensions</h1>
+          <!-- <div class="project-title-info">
             <div class="project-info-item"><span class="text-primary">Client</span>: Modernize ltd.</div>
             <div class="project-info-item"><span class="text-primary">Scale:</span> 3500 km<sup>2</sup></div>
-          </div>
+          </div> -->
         </header>
       </div>
 
@@ -193,14 +193,12 @@
             <div class="row">
               <div class="project-details-info wow fadeInLeft">
                 <h3 class="project-details-title">
-                  Project description<br> is here #1
+                  Expand Your Home
                 </h3>
-                <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
-                This can be compared to an actual office’s files, machines and decorations. 
-                The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
+                <p class="project-details-descr">Unlock the full potential of your property with our expert extension services. Whether you're craving extra living space, a luxurious new master suite, or a sleek modern kitchen, AD Carpentry & Construction is here to turn your vision into reality. Our dedicated team specialises in seamlessly integrating new extensions with your existing home, ensuring a harmonious blend of style, functionality, and structural integrity.</p>
               </div>
               <div class="project-details-img col-md-8 col-md-offset-4">
-                <img alt="" class="img-responsive" src="img/projects/1-780x668.jpg">
+                <img alt="" class="img-responsive" src="img/projects/extension-1.jpg">
               </div>
             </div>
           </div>
@@ -208,14 +206,12 @@
             <div class="row">
               <div class="project-details-info wow fadeInRight">
                 <h3 class="project-details-title">
-                  Project description<br> is here #2
+                  Tailored Solutions
                 </h3>
-                <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
-                This can be compared to an actual office’s files, machines and decorations. 
-                The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
+                <p class="project-details-descr">Every home is unique, and so is every extension project. At AD Carpentry & Construction, we take a personalised approach to design and construction, working closely with you to understand your needs, preferences, and budget. From concept sketches to detailed plans, we'll collaborate with you every step of the way to create a bespoke extension that complements your lifestyle and enhances the value of your property.</p>
               </div>
               <div class="project-details-img col-md-8">
-                <img alt="" class="img-responsive" src="img/projects/2-780x668.jpg">
+                <img alt="" class="img-responsive" src="img/projects/extension-2.jpg">
               </div>
             </div>
           </div>
@@ -223,14 +219,12 @@
             <div class="row">
               <div class="project-details-info wow fadeInLeft">
                 <h3 class="project-details-title">
-                  Project description<br> is here #3
+                  Quality Craftsmanship, Timely Completion
                 </h3>
-                <p class="project-details-descr">It is a good idea to think of your PC as an office. It stores files, programs, pictures. 
-                This can be compared to an actual office’s files, machines and decorations. 
-                The operating system is the boss. With this image in mind, think of an office you’ve visited that was slow and inefficient.</p>
+                <p class="project-details-descr">When it comes to extensions, quality and efficiency are paramount. That's why we combine superior craftsmanship with meticulous project management to deliver exceptional results on time and within budget. Our team of skilled tradespeople and contractors is committed to upholding the highest standards of excellence, using premium materials and advanced techniques to ensure lasting beauty, durability, and functionality in every extension we build.</p>
               </div>
               <div class="project-details-img col-md-8 col-md-offset-4">
-                <img alt="" class="img-responsive" src="img/projects/3-780x668.jpg">
+                <img alt="" class="img-responsive" src="img/projects/extension-3.jpg">
               </div>
             </div>
           </div>
