--- a/light/index.html
+++ b/light/index.html
@@ -255,7 +255,7 @@
                 data-start="1500" 
                 data-splitin="none" 
                 data-splitout="none" 
-                data-responsive_offset="on"><a href="#about" class="btn js-target-scroll">Look more <i class="icon-next"></i></a>
+                data-responsive_offset="on"><a href="#about" class="btn js-target-scroll">Learn More <i class="icon-next"></i></a>
               </div>
             </li>
 
@@ -326,7 +326,7 @@
                 data-splitin="none" 
                 data-splitout="none" 
                 data-responsive_offset="on"
-                style="z-index: 8;"><a href="#about" class="btn js-target-scroll">Look more <i class="icon-next"></i></a>
+                style="z-index: 8;"><a href="#about" class="btn js-target-scroll">Learn More <i class="icon-next"></i></a>
               </div>
             </li>
 
@@ -397,7 +397,7 @@
                 data-splitin="none" 
                 data-splitout="none" 
                 data-responsive_offset="on" 
-                style="z-index: 8;"><a href="#about" class="btn js-target-scroll">Look more <i class="icon-next"></i></a>
+                style="z-index: 8;"><a href="#about" class="btn js-target-scroll">Learn More <i class="icon-next"></i></a>
               </div>
             </li>
           </ul>
