--- a/project.html
+++ b/project.html
@@ -159,11 +159,9 @@
     <main class="main main-inner main-project" style="background-image:url('img/bg/project.jpg');" data-stellar-background-ratio="0.6">
       <div class="container">
         <header class="main-header">
-          <h1>Project in Paris</h1>
+          <h1>Kitchens</h1>
           <div class="project-title-info">
-            <div class="project-info-item"><span class="text-primary">Client</span>: Modernize ltd.</div>
-            <div class="project-info-item"><span class="text-primary">Scale:</span> 3500 km<sup>2</sup></div>
-          </div>
+            
         </header>
       </div>
 
