--- a/projects.html
+++ b/projects.html
@@ -194,10 +194,10 @@
                   <img alt="" src="img/projects/1-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Residential care<br> project in Paris
+                      Cardinham
                     </h3>
                     <h4 class="project-category">
-                      Architecture
+                      New Build
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -210,10 +210,10 @@
                   <img alt="" src="img/projects/2-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Concert hall<br> in New york
+                      Bodmin
                     </h3>
                     <h4 class="project-category">
-                      Interior
+                      Extension
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -226,10 +226,10 @@
                   <img alt="" src="img/projects/3-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Modern hotel<br>in London
+                      Bodmin
                     </h3>
                     <h4 class="project-category">
-                      Architecture
+                      Renovation
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -242,10 +242,10 @@
                   <img alt="" src="img/projects/4-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Modern hotel<br>in London
+                      Bodmin
                     </h3>
                     <h4 class="project-category">
-                      Interior
+                      Cloakroam
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -258,10 +258,10 @@
                   <img alt="" src="img/projects/5-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Modern Livingroom<br> in New York
+                      Cornwall
                     </h3>
                     <h4 class="project-category">
-                      Architecture
+                      Renovation
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -274,10 +274,27 @@
                   <img alt="" src="img/projects/6-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Observatory plan<br>In moscow
+                      Bodmin 
                     </h3>
                     <h4 class="project-category">
-                      Interior
+                      Extension
+                    </h4>
+                    <div class="project-zoom"></div>
+                  </figcaption>
+                </figure>
+              </a>
+            </div>
+
+            <div class="project project-light col-sm-6 col-md-4 col-lg-3">
+              <a href="img/projects/8-480x880.jpg" title="National Library in Madrid">
+                <figure>
+                  <img alt="" src="img/projects/8-480x880.jpg">
+                  <figcaption>
+                    <h3 class="project-title">
+                      Bodmin
+                    </h3>
+                    <h4 class="project-category">
+                      Garage
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
@@ -290,37 +307,22 @@
                   <img alt="" src="img/projects/7-480x880.jpg">
                   <figcaption>
                     <h3 class="project-title">
-                      Townhouse design<br> in Chicago
+                      Cornwall
                     </h3>
                     <h4 class="project-category">
-                      Architecture
+                      Shower room
                     </h4>
                     <div class="project-zoom"></div>
                   </figcaption>
                 </figure>
               </a>
             </div>
-            <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/8-480x880.jpg" title="National Library in Madrid">
-                <figure>
-                  <img alt="" src="img/projects/8-480x880.jpg">
-                  <figcaption>
-                    <h3 class="project-title">
-                      National Library<br> in Madrid
-                    </h3>
-                    <h4 class="project-category">
-                      Interior
-                    </h4>
-                    <div class="project-zoom"></div>
-                  </figcaption>
-                </figure>
-              </a>
-            </div>
+            
           </div>
         </div>
-        <div class="section-content text-center">
+        <!-- <div class="section-content text-center">
           <a href="#" class="btn btn-gray">More projects</a>
-        </div>
+        </div> -->
       </section>
 
       <!-- Contacts -->
