--- a/new-builds.html
+++ b/new-builds.html
@@ -156,7 +156,7 @@
     
     <!-- Home -->
     
-    <main class="main main-inner main-project" style="background-image:url('img/bg/project.jpg');" data-stellar-background-ratio="0.6">
+    <main class="main main-inner main-project" style="background-image:url('img/projects/new-build.jpg');" data-stellar-background-ratio="0.6">
       <div class="container">
         <header class="main-header">
           <h1>New Builds</h1>
