--- a/windows.html
+++ b/windows.html
@@ -156,7 +156,7 @@
 
     <!-- Home -->
 
-    <main class="main main-inner main-project" style="background-image:url('img/bg/project.jpg');"
+    <main class="main main-inner main-project" style="background-image:url('img/projects/extensions.jpg');"
       data-stellar-background-ratio="0.6">
       <div class="container">
         <header class="main-header">
