--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
           </li>
 
           <li>
-            <a href="services.html">Sevices</a>
+            <a href="services.html">Services</a>
           </li>
 
 
@@ -133,7 +133,7 @@
           </li>
 
           <li class="active">
-            <a href="services.html">Sevices</a>
+            <a href="services.html">Services</a>
           </li>
 
 
