--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="header-phone">07540 544126</div>
     <div class="vertical-panel"></div>
-    <div class="vertical-panel-content">
+    <div class="vertical-panel-content desktop-only">
       <div class="vertical-panel-info">
         <div class="vertical-panel-title">ADCarpentry & Construction Ltd</div>
         <div class="line"></div>
