--- a/projects.html
+++ b/projects.html
@@ -189,7 +189,7 @@
         <div class="js-projects-gallery">
           <div class="row">
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href=“projects.html” title="Residential care project in Paris">
+              <a href=“projects.html” title="New Build in Cardinham">
                 <figure>
                   <img alt="" src="img/projects/1-480x880.jpg">
                   <figcaption>
@@ -205,7 +205,7 @@
               </a>
             </div>
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/2-480x880.jpg" title="Concert hall in New york">
+              <a href="img/projects/2-480x880.jpg" title="Extension in Bodmin">
                 <figure>
                   <img alt="" src="img/projects/2-480x880.jpg">
                   <figcaption>
@@ -221,7 +221,7 @@
               </a>
             </div>
             <div class="project col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/3-480x880.jpg" title="Modern hotel in London">
+              <a href="img/projects/3-480x880.jpg" title="Renovation in Bodmin">
                 <figure>
                   <img alt="" src="img/projects/3-480x880.jpg">
                   <figcaption>
@@ -237,7 +237,7 @@
               </a>
             </div>
             <div class="project col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/4-480x880.jpg" title="Modern hotel in London">
+              <a href="img/projects/4-480x880.jpg" title="Cloakroom in Bodmin">
                 <figure>
                   <img alt="" src="img/projects/4-480x880.jpg">
                   <figcaption>
@@ -253,7 +253,7 @@
               </a>
             </div>
             <div class="project col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/5-480x880.jpg" title="Modern Livingroom in New York">
+              <a href="img/projects/5-480x880.jpg" title="Renovation in Cornwall">
                 <figure>
                   <img alt="" src="img/projects/5-480x880.jpg">
                   <figcaption>
@@ -269,7 +269,7 @@
               </a>
             </div>
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/6-480x880.jpg" title="Observatory plan In moscow">
+              <a href="img/projects/6-480x880.jpg" title="Extension in Bodmin">
                 <figure>
                   <img alt="" src="img/projects/6-480x880.jpg">
                   <figcaption>
@@ -286,7 +286,7 @@
             </div>
 
             <div class="project project-light col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/8-480x880.jpg" title="National Library in Madrid">
+              <a href="img/projects/8-480x880.jpg" title="Garage in Bodmin">
                 <figure>
                   <img alt="" src="img/projects/8-480x880.jpg">
                   <figcaption>
@@ -302,7 +302,7 @@
               </a>
             </div>
             <div class="project col-sm-6 col-md-4 col-lg-3">
-              <a href="img/projects/7-480x880.jpg" title="Townhouse design in Chicago">
+              <a href="img/projects/7-480x880.jpg" title="Shower room in Cornwall">
                 <figure>
                   <img alt="" src="img/projects/7-480x880.jpg">
                   <figcaption>
