--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="carpentry, construction, builder, renovations, newbuilds, new builds, homes, kitchens, bathrooms, extensions, plastering, tiling, Bodmin, Cornwall">
 
   <!-- Social Sharing Image -->
-  <meta property="og:title" content="ADCarpentry & Construction Ltd - Leading Local Carpenter and Builder in Bodmin Cornwall">
+  <meta property="og:title" content="ADCarpentry & Construction Ltd - Leading Local Carpenter and Builder in Bodmin, Cornwall">
   <meta property="og:description" content="ADCarpentry & Construction is a leading local carpenter and builder in Bodmin Cornwall. We specialize in renovations, new builds, extensions, plastering, and tiling.">
   <meta property="og:image" content="img/facebook.jpg">
   <meta property="og:url" content="https://ad-carpentry.com/">
