--- a/projects.html
+++ b/projects.html
@@ -78,9 +78,9 @@
         <div class="line"></div>
       </div>
       <ul class="social-list">
-        <li><a href="" class="fa fa-instagram"></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/share/1ExZ9BjiYb/?mibextid=LQQJ4d" class="fa fa-instagram"></a></li>
        
-        <li><a href="" class="fa fa-facebook"></a></li>
+        <li><a target="_blank" href="https://www.instagram.com/adcarpentry_and_construction/profilecard/?igsh=MWE0N2FmbHlvemlteQ==" class="fa fa-facebook"></a></li>
       </ul>
     </div>
 
