--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div class="line"></div>
       </div>
       <ul class="social-list">
-        <li><a target="_blank" href="https://www.facebook.com/share/1ExZ9BjiYb/?mibextid=LQQJ4d" class="fa fa-instagram"></a></li>
+        <li><a target="_blank" href="https://www.instagram.com/adcarpentry_and_construction/profilecard/?igsh=MWE0N2FmbHlvemlteQ%3D%3D" class="fa fa-instagram"></a></li>
        
-        <li><a target="_blank" href="https://www.instagram.com/adcarpentry_and_construction/profilecard/?igsh=MWE0N2FmbHlvemlteQ==" class="fa fa-facebook"></a></li>
+        <li><a target="_blank" href="https://www.facebook.com/profile.php?id=61576608503472&rdid=L1t02RUYIJkvMesr&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1Cb5z4Pnqd%2F#" class="fa fa-facebook"></a></li>
       </ul>
     </div>
 
